# DoomPlayer

./: .gitignore  CMakeLists.bak  CMakeLists.txt  LICENSE  Makefile  Makefile.bak  README.md  chocolate-doom
App/: DoomPlayer.h  app_console.c  app_dualsense.c  app_gui.c  app_gui.h  app_main.c  app_music.h  app_music_list.c  app_music_main.c  app_sound.c  app_sound.h  app_task.h  app_verify.c  audio_output.c  audio_output.h  board_if.h  cover_if.c  doom_helper.c  doomfs.h  fatfs.c  fatfs.h  jpeg_if.c  jpeg_if.h  jpeg_lut.h  mix_player.c  mplayer.h  sdl_helper.c  sdl_joystick.c  src32k.c  src32k.h
App/assets/: Doom1_icon.c  README  dualsense2.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_loop.c  (+19 more)
GameData/: REAME_GAME.md  default.cfg  disco-doom.cfg  doom1-music.cfg  doom2-music.cfg  dualsense.ibin  tnt-music.cfg
Middlewares/: CMakeLists.txt
RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h
SDL/: SDL.h  SDL_endian.h  SDL_filesystem.h  SDL_joystick.h  SDL_keycode.h  SDL_mixer.h
STM32F769/: STM32F769NIHx_FLASH.ld  app_layout.c  btimg.c  startup_stm32f769xx.s
STM32F769/Drivers/: CMakeLists.txt
STM32F769/Drivers/BSP/: board_if.c  bsp_driver_sd.c  bsp_driver_sd.h  fatfs_platform.h  sd_diskio.c  sd_diskio.c_old  sd_diskio.h  stm32f769i_discovery.c  stm32f769i_discovery.h  stm32f769i_discovery_audio.c  stm32f769i_discovery_audio.h  stm32f769i_discovery_eeprom.c  stm32f769i_discovery_eeprom.h  stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h  stm32f769i_discovery_qspi.c  stm32f769i_discovery_qspi.h  stm32f769i_discovery_sd.c  stm32f769i_discovery_sd.h  stm32f769i_discovery_sdram.c  stm32f769i_discovery_sdram.h  stm32f769i_discovery_ts.c  stm32f769i_discovery_ts.h
STM32F769/Drivers/BSP/Components/dp83848/: Release_Notes.html
STM32F769/Drivers/BSP/Components/ft3x67/: Release_Notes.html  ft3x67.c  ft3x67.h
STM32F769/Drivers/BSP/Components/otm8009a/: Release_Notes.html  otm8009a.c  otm8009a.h
STM32F769/Drivers/BSP/Components/ov5640/: Release_Notes.html  ov5640.c  ov5640.h
STM32F769/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_hcd.c  stm32f7xx_hal_ltdc.c  stm32f7xx_ll_usb.c
STM32H7B3/: STM32H7B3LIHxQ_FLASH.ld  app_layout.c  btimg.c  startup_stm32h7b3xxq.s
STM32H7B3/Drivers/: CMakeLists.txt
STM32H7B3/Drivers/BSP/: Release_Notes.html  board_if.c  fatfs_platform.h  sd_diskio.c  stm32h7b3i_discovery.c  stm32h7b3i_discovery.h  stm32h7b3i_discovery_audio.c  stm32h7b3i_discovery_audio.h  stm32h7b3i_discovery_bus.c  stm32h7b3i_discovery_bus.h  stm32h7b3i_discovery_camera.c  stm32h7b3i_discovery_camera.h  stm32h7b3i_discovery_conf.h  stm32h7b3i_discovery_conf_template.h  stm32h7b3i_discovery_eeprom.c  stm32h7b3i_discovery_eeprom.h  stm32h7b3i_discovery_errno.h  stm32h7b3i_discovery_lcd.c  stm32h7b3i_discovery_lcd.h  stm32h7b3i_discovery_lcd.org  stm32h7b3i_discovery_lcd.prev  stm32h7b3i_discovery_ospi.c  stm32h7b3i_discovery_ospi.h  stm32h7b3i_discovery_sd.c  stm32h7b3i_discovery_sd.h  stm32h7b3i_discovery_sdram.c  stm32h7b3i_discovery_sdram.h  stm32h7b3i_discovery_ts.c  stm32h7b3i_discovery_ts.h  usbh_platform.c
STM32H7B3/Drivers/BSP/Components/exc7200/: exc7200.c  exc7200.h  exc7200_conf_template.h  exc7200_reg.c  exc7200_reg.h
STM32H7B3/Drivers/BSP/Components/ft6x06/: ft6x06.c  ft6x06.h  ft6x06_conf_template.h  ft6x06_reg.c  ft6x06_reg.h
STM32H7B3/Drivers/BSP/Components/is42s16800j/: is42s16800j.c  is42s16800j.h  is42s16800j_conf_template.h
STM32H7B3/Drivers/BSP/Components/is42s32800g/: is42s32800g.c  is42s32800g.h  is42s32800g_conf_template.h
STM32H7B3/Drivers/BSP/Components/mfxstm32l152/: mfxstm32l152.c
STM32H7B3/Drivers/BSP/Components/mt25tl01g/: mt25tl01g.h
STM32H7B3/Drivers/BSP/Components/mt48lc4m32b2/: mt48lc4m32b2.c  mt48lc4m32b2.h  mt48lc4m32b2_conf_template.h
STM32H7B3/Drivers/BSP/Components/mx_wifi/: CheckSumUtils.c  CheckSumUtils.h  mx_wifi.c  mx_wifi.h  mx_wifi_conf_template.h  mx_wifi_hci.c  mx_wifi_hci.h  mx_wifi_ipc.c  mx_wifi_ipc.h  mx_wifi_slip.c  mx_wifi_slip.h
STM32H7B3/Drivers/BSP/Components/mx_wifi/lib_ipc/: ipc_basic_type.h  ipc_cmd_event_define.h  ipc_cmd_list.h  ipc_event_list.h  ipc_recv.c  ipc_send.c  lib_ipc.h
STM32H7B3/Drivers/BSP/Components/ov9655/: ov9655.c  ov9655.h  ov9655_reg.c  ov9655_reg.h
STM32H7B3/Drivers/BSP/Components/rk043fn48h/: rk043fn48h.h
STM32H7B3/Drivers/BSP/Components/s70kl1281/: s70kl1281.c  s70kl1281.h  s70kl1281_conf_template.h
STM32H7B3/Drivers/BSP/Components/st7735/: st7735.c
STM32H7B3/Drivers/BSP/Components/stmpe811/: stmpe811.c  stmpe811.h  stmpe811_conf_template.h  stmpe811_reg.c  stmpe811_reg.h
STM32H7B3/Drivers/BSP/Components/ts3510/: ts3510.c  ts3510.h  ts3510_conf_template.h  ts3510_reg.c  ts3510_reg.h
STM32H7B3/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_hcd.c  stm32h7xx_hal_hcd.org  stm32h7xx_hal_sd.c  stm32h7xx_ll_usb.c
USB/: 8bitdozero2.c  CMakeLists.txt  dualsense.c  dualsense_report.h  dualshock4.c  dualshock4_report.h  gamepad.c  gamepad.h  usbh_audio.c  usbh_audio.h  usbh_bluetooth.c  usbh_bluetooth.h  usbh_core.c  usbh_core.h  usbh_ctlreq.c  usbh_ctlreq.h  usbh_def.h  usbh_hid.c  usbh_hid.h  usbh_hid_dualsense.c  usbh_hid_dualsense.h  usbh_hid_keybd.c  usbh_hid_keybd.h  usbh_hid_parser.h  usbh_hid_usage.h  usbh_ioreq.c  usbh_ioreq.h  usbh_pipes.h  usbh_platform.h
btstack/: CMakeLists.txt  btstack_config.h  btstack_port.c  hal_flash_bank_memory.c  hci_dump_segger_rtt_stdout.c  hci_if.h  hid_gamepad.c
btstack/src/: btstack.h  btstack_defines.h  btstack_memory_pool.c  btstack_run_loop.c  hci.c  hci.h
btstack/src/classic/: hid_host.c  sdp_client.c  sdp_server.c
chocolate-doom-3.0.1/src/: CMakeLists.txt  config.h  d_dedicated.c  d_iwad.c  d_loop.c  deh_main.c  i_endoom.c  i_input.c  i_joystick.c  i_main.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_system.c  i_video.c  m_config.c  m_misc.c  m_misc.h  net_gui.c  net_sdl.c  sha1.c  v_diskicon.c  w_file.c  w_file_fatfs.c  w_file_posix.c  w_main.c
chocolate-doom-3.0.1/src/doom/: d_main.c  g_game.c  m_menu.c  p_saveg.c  p_saveg.h  s_sound.c
(+38 files in other folders)
