set(DRVSRCS
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_flash_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hsem.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_jpeg.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hash.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2s.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_exti.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ospi.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sai.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_delayblock.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_tim_ex.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
  STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
  BSP/stm32h7b3i_discovery_lcd.c
  BSP/stm32h7b3i_discovery.c
  BSP/stm32h7b3i_discovery_ospi.c
  BSP/stm32h7b3i_discovery_audio.c
  BSP/stm32h7b3i_discovery_bus.c
  BSP/stm32h7b3i_discovery_sdram.c
  BSP/stm32h7b3i_discovery_ts.c
  BSP/Components/cs42l51/cs42l51.c
  BSP/Components/cs42l51/cs42l51_reg.c
  BSP/Components/is42s16800j/is42s16800j.c
  BSP/Components/ft5336/ft5336.c
  BSP/Components/ft5336/ft5336_reg.c
  BSP/Components/mx25lm51245g/mx25lm51245g.c
  BSP/bsp_driver_sd.c
  BSP/sd_diskio.c
  BSP/fatfs_platform.c
  BSP/usbh_platform.c
  BSP/board_if.c
)

add_library(drivers STATIC ${DRVSRCS})
